tests/NormalTests/paczka2/big_fuzzy/61848888.err
Error in line 4: M1Ub5SCrG A927 2,6
Error in line 15: A927 A927 89,5
Error in line 13: SjcjOu S72 10,2
Error in line 18: SjcjOu A927 12,7
Error in line 28: M1Ub5SCrG S542 80,4
Error in line 35: tsns S542 7,6
Error in line 38: A927 S72 83,1
Error in line 48: BSd S928 88,5
Error in line 56: SjcjOu A927 37,6
Error in line 47: M1Ub5SCrG S72 94,4
Error in line 60: M1Ub5SCrG A9Q7 Q9,7
Error in line 58: M1Ub5SCrG S928 11,3
Error in line 62: tsns S72 9,0
Error in line 74: tsns S928 67,4
Error in line 54: LVjZO0QkSVi A927 138,0
Error in line 64: M1Ub5SCrG A927 53,5
Error in line 87: LVjZO0QkSVi S542 95,5
Error in line 86: SjcjOu A927 9,0
Error in line 103: BSd S928 2,9
Error in line 104: raGrAqnUEg S928 59,2
Error in line 107: raGrAqnUEg A927 48,1
Error in line 108: raGrAqnUEg S72 47,0
Error in line 120: BSd A92 9,8
Error in line 112: M1Ub5SCrG S542 59,0
Error in line 123: LVjZO0QkSVi S542 68,4
Error in line 141: tsns S928 51,9
Error in line 140: SjcjOu S72 14,4
Error in line 145: SjcjOu S542 62,3
Error in line 135: M1Ub5SCrG S72 13,9
Error in line 153: LVjZO0QkSVi A927 57,33
Error in line 152: BSd S72 95,5
Error in line 146: SjcjOu S72 27,0
Error in line 156: SjcjOu A927 97,0
Error in line 158: M1Ub5SCrG S542 21,4
Error in line 155: BSd S928 63,2
Error in line 161: BSd A927 14,8
Error in line 138: raGrAqnUEg S928 119,7
Error in line 167: raGrAqnUEg S72 66,5
Error in line 172: M1Ub5SCrG S542 35,0
Error in line 173: M1Ub5SCrG S72 16,2
Error in line 151: LVjZO0QkSVi A927 33,7
Error in line 197: A927 A927 72,3
Error in line 213: raGrAqnUEg S72 144,1
Error in line 212: LVjZO0QkSVi S72 79,9
Error in line 218: tsns S542 50,4
Error in line 206: SjcjOu S72 83,0
Error in line 217: raGrAqnUEg S542 95,1
Error in line 224: LVjZO0QkSVi A927 85,2
Error in line 227: raGrAqnUEg S928 40,4
Error in line 239: raGrAqnUEg S72 67,5
